openvidu-test-e2e: use barcode.y4m file under /opt/openvidu path

--- a/openvidu-test-e2e/docker/Dockerfile
+++ b/openvidu-test-e2e/docker/Dockerfile
@@ -45,6 +45,7 @@ RUN apt-get -y install sudo
 RUN rm -rf /var/lib/apt/lists/*
 RUN apt-get autoremove --purge -y
 
+COPY barcode.y4m /opt/openvidu/barcode.y4m
 COPY entrypoint.sh /entrypoint.sh
 RUN ["chmod", "+x", "/entrypoint.sh"]
 
