--- a/openvidu-node-client/package.json
+++ b/openvidu-node-client/package.json
@@ -1,26 +1,25 @@
 {
     "author": "OpenVidu",
     "dependencies": {
-        "axios": "^0.18.0",
-        "buffer": "^5.1.0"
+        "axios": "0.18.0",
+        "buffer": "5.2.1"
     },
     "description": "OpenVidu Node Client",
     "devDependencies": {
-        "@types/node": "10.3.2",
+        "@types/node": "10.9.4",
         "grunt": "1.0.3",
         "grunt-autoprefixer": "3.0.4",
-        "grunt-cli": "1.2.0",
+        "grunt-cli": "1.3.1",
         "grunt-contrib-copy": "1.0.0",
         "grunt-contrib-sass": "1.0.0",
-        "grunt-contrib-uglify": "3.3.0",
+        "grunt-contrib-uglify": "3.4.0",
         "grunt-contrib-watch": "1.1.0",
         "grunt-string-replace": "1.3.1",
-        "grunt-ts": "6.0.0-beta.19",
-        "ts-node": "6.1.0",
-        "tslint": "5.10.0",
-        "typedoc": "^0.11.1",
-        "typedoc-plugin-sourcefile-url": "^1.0.3",
-        "typescript": "2.9.1"
+        "grunt-ts": "6.0.0-beta.21",
+        "ts-node": "7.0.1",
+        "tslint": "5.11.0",
+        "typedoc": "0.12.0",
+        "typescript": "3.0.3"
     },
     "license": "Apache-2.0",
     "main": "lib/index.js",
