--- a/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -7,6 +7,12 @@
 			"defaultValue": "[\"ws://localhost:8888/kurento\"]"
 		},
 		{
+			"name": "kms.stats-enabled",
+			"type": "java.lang.Boolean",
+			"description": "Whether to activate the KMS WebRTC statistics feature or not. This may increase the processor consumption",
+			"defaultValue": false
+		},
+		{
 			"name": "openvidu.secret",
 			"type": "java.lang.String",
 			"description": "Secret used to connect to OpenVidu Server. This value is required when using the REST API or any server client, as well as when connecting to openvidu-server dashboard",
@@ -69,7 +75,7 @@
 			"name": "openvidu.streams.video.max-recv-bandwidth",
 			"type": "java.lang.Integer",
 			"description": "Maximum video bandwidth sent from clients to OpenVidu Server, in kbps. 0 means unconstrained",
-			"defaultValue": 600
+			"defaultValue": 1000
 		},
 		{
 			"name": "openvidu.streams.video.min-recv-bandwidth",
@@ -81,7 +87,7 @@
 			"name": "openvidu.streams.video.max-send-bandwidth",
 			"type": "java.lang.Integer",
 			"description": "Maximum video bandwidth sent from OpenVidu Server to clients, in kbps. 0 means unconstrained",
-			"defaultValue": 600
+			"defaultValue": 1000
 		},
 		{
 			"name": "openvidu.streams.video.min-send-bandwidth",
