--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -20,12 +20,13 @@ openvidu.recording.public-access: false
 openvidu.recording.notification: publisher_moderator
 openvidu.recording.custom-layout: /opt/openvidu/custom-layout
 
-openvidu.streams.video.max-recv-bandwidth: 600
+openvidu.streams.video.max-recv-bandwidth: 1000
 openvidu.streams.video.min-recv-bandwidth: 300
-openvidu.streams.video.max-send-bandwidth: 600
+openvidu.streams.video.max-send-bandwidth: 1000
 openvidu.streams.video.min-send-bandwidth: 300
 
 kms.uris: [\"ws://localhost:8888/kurento\"]
+kms.stats-enabled: false
 
 coturn.redis.ip: 127.0.0.1
 coturn.redis.dbname: 0
