--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -1,37 +1,37 @@
 {
     "dependencies": {
-        "@angular/animations": "6.0.7",
-        "@angular/cdk": "6.3.2",
-        "@angular/common": "6.0.7",
-        "@angular/compiler": "6.0.7",
-        "@angular/core": "6.0.7",
-        "@angular/flex-layout": "6.0.0-beta.16",
-        "@angular/forms": "6.0.7",
-        "@angular/http": "6.0.7",
-        "@angular/material": "6.3.2",
-        "@angular/platform-browser": "6.0.7",
-        "@angular/platform-browser-dynamic": "6.0.7",
-        "@angular/router": "6.0.7",
+        "@angular/animations": "7.0.0-beta.7",
+        "@angular/cdk": "7.0.0-beta.2",
+        "@angular/common": "7.0.0-beta.7",
+        "@angular/compiler": "7.0.0-beta.7",
+        "@angular/core": "7.0.0-beta.7",
+        "@angular/flex-layout": "6.0.0-beta.18",
+        "@angular/forms": "7.0.0-beta.7",
+        "@angular/http": "7.0.0-beta.7",
+        "@angular/material": "7.0.0-beta.2",
+        "@angular/platform-browser": "7.0.0-beta.7",
+        "@angular/platform-browser-dynamic": "7.0.0-beta.7",
+        "@angular/router": "7.0.0-beta.7",
         "colormap": "2.3.0",
         "core-js": "2.5.7",
         "hammerjs": "2.0.8",
         "openvidu-browser": "2.4.0",
         "openvidu-node-client": "2.4.0",
-        "rxjs": "6.2.1",
+        "rxjs": "6.3.3",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.6.8",
-        "@angular/cli": "6.0.8",
-        "@angular/compiler-cli": "6.0.7",
-        "@angular/language-service": "6.0.7",
+        "@angular-devkit/build-angular": "0.8.3",
+        "@angular/cli": "7.0.0-beta.4",
+        "@angular/compiler-cli": "7.0.0-beta.7",
+        "@angular/language-service": "7.0.0-beta.7",
         "@types/jasmine": "2.8.8",
-        "@types/jasminewd2": "2.0.3",
-        "@types/node": "10.5.1",
-        "codelyzer": "4.4.2",
-        "ts-node": "7.0.0",
-        "tslint": "5.10.0",
-        "typescript": "2.7.2"
+        "@types/jasminewd2": "2.0.4",
+        "@types/node": "10.11.0",
+        "codelyzer": "4.4.4",
+        "ts-node": "7.0.1",
+        "tslint": "5.11.0",
+        "typescript": "3.0.3"
     },
     "license": "Apache-2.0",
     "name": "openvidu-testapp",
