openvidu-server-kms Dockerfile update to KMS 6.8.0

--- a/openvidu-server/docker/openvidu-server-kms/Dockerfile
+++ b/openvidu-server/docker/openvidu-server-kms/Dockerfile
@@ -2,12 +2,10 @@ FROM ubuntu:16.04
 MAINTAINER openvidu@gmail.com
 
 # Install Kurento Media Server (KMS) 
-RUN echo "deb http://ubuntu.openvidu.io/6.7.2 xenial kms6" | tee /etc/apt/sources.list.d/kurento.list \
+RUN echo "deb http://ubuntu.openvidu.io/6.8.0 xenial kms6" | sudo tee /etc/apt/sources.list.d/kurento.list \
 	&& apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 5AFA7A83 \
 	&& apt-get update \
-	&& apt-get -y dist-upgrade \
 	&& apt-get -y install kurento-media-server \
-	&& apt-get -y install openh264-gst-plugins-bad-1.5 \
 	&& rm -rf /var/lib/apt/lists/*
 
 # Install Java, supervisor and netstat
