--- a/openvidu-server/src/angular/frontend/package.json
+++ b/openvidu-server/src/angular/frontend/package.json
@@ -1,33 +1,33 @@
 {
     "dependencies": {
-        "@angular/animations": "6.0.9",
-        "@angular/cdk": "6.3.3",
-        "@angular/common": "6.0.9",
-        "@angular/compiler": "6.0.9",
-        "@angular/core": "6.0.9",
-        "@angular/flex-layout": "^6.0.0-beta.16",
-        "@angular/forms": "6.0.9",
-        "@angular/http": "6.0.9",
-        "@angular/material": "6.3.3",
-        "@angular/platform-browser": "6.0.9",
-        "@angular/platform-browser-dynamic": "6.0.9",
-        "@angular/router": "6.0.9",
-        "core-js": "^2.5.7",
+        "@angular/animations": "7.0.0",
+        "@angular/cdk": "7.0.0",
+        "@angular/common": "7.0.0",
+        "@angular/compiler": "7.0.0",
+        "@angular/core": "7.0.0",
+        "@angular/flex-layout": "7.0.0-beta.19",
+        "@angular/forms": "7.0.0",
+        "@angular/http": "7.0.0",
+        "@angular/material": "7.0.0",
+        "@angular/platform-browser": "7.0.0",
+        "@angular/platform-browser-dynamic": "7.0.0",
+        "@angular/router": "7.0.0",
+        "core-js": "2.5.7",
         "hammerjs": "2.0.8",
         "openvidu-browser": "2.5.0",
-        "rxjs": "6.2.1",
+        "rxjs": "6.3.3",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.6.8",
-        "@angular/cli": "6.0.8",
-        "@angular/compiler-cli": "6.0.9",
-        "@types/jasmine": "2.8.8",
-        "@types/node": "10.5.2",
-        "codelyzer": "4.4.2",
-        "ts-node": "7.0.0",
-        "tslint": "5.10.0",
-        "typescript": "2.7.2"
+        "@angular-devkit/build-angular": "0.10.1",
+        "@angular/cli": "7.0.1",
+        "@angular/compiler-cli": "7.0.0",
+        "@types/jasmine": "2.8.9",
+        "@types/node": "10.12.0",
+        "codelyzer": "4.5.0",
+        "ts-node": "7.0.1",
+        "tslint": "5.11.0",
+        "typescript": "3.1.3"
     },
     "license": "Apache-2.0",
     "name": "frontend",
