--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -1,48 +1,48 @@
 {
     "dependencies": {
-        "@angular/animations": "7.0.0-beta.7", 
-        "@angular/cdk": "7.0.0-beta.2", 
-        "@angular/common": "7.0.0-beta.7", 
-        "@angular/compiler": "7.0.0-beta.7", 
-        "@angular/core": "7.0.0-beta.7", 
-        "@angular/flex-layout": "6.0.0-beta.18", 
-        "@angular/forms": "7.0.0-beta.7", 
-        "@angular/http": "7.0.0-beta.7", 
-        "@angular/material": "7.0.0-beta.2", 
-        "@angular/platform-browser": "7.0.0-beta.7", 
-        "@angular/platform-browser-dynamic": "7.0.0-beta.7", 
-        "@angular/router": "7.0.0-beta.7", 
-        "colormap": "2.3.0", 
-        "core-js": "2.5.7", 
-        "hammerjs": "2.0.8", 
-        "openvidu-browser": "2.6.0", 
-        "openvidu-node-client": "2.5.0", 
-        "rxjs": "6.3.3", 
+        "@angular/animations": "7.0.1",
+        "@angular/cdk": "7.0.2",
+        "@angular/common": "7.0.1",
+        "@angular/compiler": "7.0.1",
+        "@angular/core": "7.0.1",
+        "@angular/flex-layout": "7.0.0-beta.19",
+        "@angular/forms": "7.0.1",
+        "@angular/http": "7.0.1",
+        "@angular/material": "7.0.2",
+        "@angular/platform-browser": "7.0.1",
+        "@angular/platform-browser-dynamic": "7.0.1",
+        "@angular/router": "7.0.1",
+        "colormap": "2.3.0",
+        "core-js": "2.5.7",
+        "hammerjs": "2.0.8",
+        "openvidu-browser": "2.6.0",
+        "openvidu-node-client": "2.5.0",
+        "rxjs": "6.3.3",
         "zone.js": "0.8.26"
-    }, 
+    },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.8.3", 
-        "@angular/cli": "7.0.0-beta.4", 
-        "@angular/compiler-cli": "7.0.0-beta.7", 
-        "@angular/language-service": "7.0.0-beta.7", 
-        "@types/jasmine": "2.8.8", 
-        "@types/jasminewd2": "2.0.4", 
-        "@types/node": "10.11.0", 
-        "codelyzer": "4.4.4", 
-        "ts-node": "7.0.1", 
-        "tslint": "5.11.0", 
-        "typescript": "3.0.3"
-    }, 
-    "license": "Apache-2.0", 
-    "name": "openvidu-testapp", 
-    "private": true, 
+        "@angular-devkit/build-angular": "0.10.3",
+        "@angular/cli": "7.0.3",
+        "@angular/compiler-cli": "7.0.1",
+        "@angular/language-service": "7.0.1",
+        "@types/jasmine": "2.8.9",
+        "@types/jasminewd2": "2.0.5",
+        "@types/node": "10.12.0",
+        "codelyzer": "4.5.0",
+        "ts-node": "7.0.1",
+        "tslint": "5.11.0",
+        "typescript": "3.1.3"
+    },
+    "license": "Apache-2.0",
+    "name": "openvidu-testapp",
+    "private": true,
     "scripts": {
-        "build": "ng build", 
-        "e2e": "ng e2e", 
-        "lint": "ng lint", 
-        "ng": "ng", 
-        "start": "ng serve", 
+        "build": "ng build",
+        "e2e": "ng e2e",
+        "lint": "ng lint",
+        "ng": "ng",
+        "start": "ng serve",
         "test": "ng test"
-    }, 
+    },
     "version": "2.6.0"
 }
