openvidu-test-e2e: Docker image updated to use KMS 6.8.1 and latest npm deps

--- a/openvidu-test-e2e/docker/Dockerfile
+++ b/openvidu-test-e2e/docker/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get -y upgrade
 RUN apt-get install -y software-properties-common && apt-get install -y --no-install-recommends apt-utils
 
 # Install Kurento Media Server (KMS)
-RUN echo "deb http://ubuntu.openvidu.io/6.8.0 xenial kms6" | tee /etc/apt/sources.list.d/kurento.list \
+RUN echo "deb http://ubuntu.openvidu.io/6.8.1 xenial kms6" | tee /etc/apt/sources.list.d/kurento.list \
 	&& apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 5AFA7A83 \
 	&& apt-get update \
 	&& apt-get -y install kurento-media-server
@@ -28,13 +28,13 @@ RUN apt-get install -y maven
 RUN apt-get install -y git
 
 # angular-cli
-RUN npm install -g @angular/cli
+RUN npm install -g @angular/cli@latest
 
 # http-server
-RUN npm install -g http-server
+RUN npm install -g http-server@latest
 
 # typescript
-RUN npm install -g typescript
+RUN npm install -g typescript@latest
 
 # sudo
 RUN apt-get -y install sudo
