Upgrade to 2.7 upstream (#3)
Additionally:
- improve Git ignoring rules

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,12 @@ nbactions.xml
 *bower_components/
 .externalToolBuilders
 *bin/
+*/.idea/*
 */.vscode/*
 */.sts4-cache/*
 */.project
 */.classpath
 */.settings/*
 */.tscache/*
+*.iml
+.DS_Store
