openvidu-recording Docker container adds parent folder for recordings

--- a/openvidu-server/docker/openvidu-recording/Dockerfile
+++ b/openvidu-server/docker/openvidu-recording/Dockerfile
@@ -23,5 +23,6 @@ COPY entrypoint.sh /entrypoint.sh
 RUN ["chmod", "+x", "/entrypoint.sh"]
 
 RUN mkdir /recordings
+RUN chmod 777 /recordings
 
 ENTRYPOINT /entrypoint.sh
