--- a/openvidu-server/src/main/resources/application-docker.properties
+++ b/openvidu-server/src/main/resources/application-docker.properties
@@ -16,6 +16,10 @@ kms.uris=[\"ws://localhost:8888/kurento\"]
 openvidu.secret: MY_SECRET
 openvidu.publicurl: local
 openvidu.cdr: false
+
 openvidu.recording: false
 openvidu.recording.path: /opt/openvidu/recordings
 openvidu.recording.public-access: false
+openvidu.recording.notification: publisher_moderator
+openvidu.recording.custom-layout: /opt/openvidu/custom-layout
+openvidu.recording.autostop-timeout: 120
