openvidu-server: update config REST controller (GET openvidu-server version)

--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -83,6 +83,12 @@
 						</configuration>
 						<executions>
 							<execution>
+								<id>build-info</id>
+								<goals>
+									<goal>build-info</goal>
+								</goals>
+							</execution>
+							<execution>
 								<goals>
 									<goal>repackage</goal>
 								</goals>
@@ -136,6 +142,12 @@
 							<classifier>exec</classifier>
 						</configuration>
 						<executions>
+							<execution>
+								<id>build-info</id>
+								<goals>
+									<goal>build-info</goal>
+								</goals>
+							</execution>
 							<execution>
 								<goals>
 									<goal>repackage</goal>
