--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -12,7 +12,7 @@
 	<packaging>jar</packaging>
 
 	<name>OpenVidu Server</name>
-	<version>${version.openvidu.server}</version>
+	<version>2.7.0</version>
 	<description>OpenVidu Server</description>
 	<url>https://github.com/OpenVidu/openvidu</url>
 
@@ -48,7 +48,6 @@
 	<properties>
 		<!-- Main class -->
 		<start-class>io.openvidu.server.OpenViduServer</start-class>
-		<version.openvidu.server>2.7.0</version.openvidu.server>
 	</properties>
 
 	<profiles>
@@ -88,11 +87,6 @@
 									<goal>build-info</goal>
 									<goal>repackage</goal>
 								</goals>
-								<configuration>
-									<additionalProperties>
-										<version.openvidu.server>${version.openvidu.server}</version.openvidu.server>
-									</additionalProperties>
-								</configuration>
 							</execution>
 						</executions>
 					</plugin>
@@ -148,11 +142,6 @@
 									<goal>build-info</goal>
 									<goal>repackage</goal>
 								</goals>
-								<configuration>
-									<additionalProperties>
-										<version.openvidu.server>${version.openvidu.server}</version.openvidu.server>
-									</additionalProperties>
-								</configuration>
 							</execution>
 						</executions>
 					</plugin>
