--- a/openvidu-server/src/angular/frontend/package.json
+++ b/openvidu-server/src/angular/frontend/package.json
@@ -14,6 +14,7 @@
     "@angular/router": "7.2.1",
     "core-js": "2.6.2",
     "hammerjs": "2.0.8",
+    "jquery": "3.3.1",
     "openvidu-browser": "2.7.0",
     "rxjs": "6.3.3",
     "zone.js": "0.8.28"
