--- a/openvidu-test-e2e/pom.xml
+++ b/openvidu-test-e2e/pom.xml
@@ -60,6 +60,7 @@
 		<junit.jupiter.version>5.0.3</junit.jupiter.version>
 		<junit.platform.version>1.3.2</junit.platform.version>
 		<selenium-jupiter.version>3.1.0</selenium-jupiter.version>
+		<org-seleniumhq-selenium.version>3.141.59</org-seleniumhq-selenium.version>
 		<slf4j.version>1.7.25</slf4j.version>
 
 		<!-- Plugins versions -->
@@ -91,31 +92,31 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.4.0</version>
+			<version>${org-seleniumhq-selenium.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-chrome-driver</artifactId>
-			<version>3.4.0</version>
+			<version>${org-seleniumhq-selenium.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-firefox-driver</artifactId>
-			<version>3.4.0</version>
+			<version>${org-seleniumhq-selenium.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-api</artifactId>
-			<version>3.4.0</version>
+			<version>${org-seleniumhq-selenium.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-remote-driver</artifactId>
-			<version>3.4.0</version>
+			<version>${org-seleniumhq-selenium.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
