--- a/openvidu-node-client/package.json
+++ b/openvidu-node-client/package.json
@@ -6,7 +6,7 @@
     },
     "description": "OpenVidu Node Client",
     "devDependencies": {
-        "@types/node": "10.12.21",
+        "@types/node": "10.12.24",
         "grunt": "1.0.3",
         "grunt-autoprefixer": "3.0.4",
         "grunt-cli": "1.3.2",
@@ -19,7 +19,7 @@
         "ts-node": "8.0.2",
         "tslint": "5.12.1",
         "typedoc": "0.14.2",
-        "typescript": "3.3.1"
+        "typescript": "3.3.3"
     },
     "license": "Apache-2.0",
     "main": "lib/index.js",
@@ -29,8 +29,8 @@
         "url": "git://github.com/OpenVidu/openvidu"
     },
     "scripts": {
-        "build": "tsc",
-        "docs": "grunt --gruntfile config/typedoc/custom-theme/gruntfile.js && typedoc --options ./config/typedoc/typedoc.js --out ./docs ./src && rm -rf ../../openvidu.io/api/openvidu-node-client/* && cp -R ./docs/. ../../openvidu.io/api/openvidu-node-client"
+        "build": "./node_modules/typescript/bin/tsc",
+        "docs": "./node_modules/grunt/bin/grunt --gruntfile config/typedoc/custom-theme/gruntfile.js && ./node_modules/typedoc/bin/typedoc --options ./config/typedoc/typedoc.js --out ./docs ./src && rm -rf ../../openvidu.io/api/openvidu-node-client/* && cp -R ./docs/. ../../openvidu.io/api/openvidu-node-client"
     },
     "typings": "lib/index.d.ts",
     "version": "2.8.0"
