--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -93,6 +94,7 @@
 	</dependencies>
 
 	<profiles>
+
 		<profile>
 			<id>default</id>
 			<activation>
@@ -103,7 +105,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>3.0.0</version>
+						<version>3.0.1</version>
 						<configuration>
 							<show>public</show>
 						</configuration>
@@ -111,6 +113,7 @@
 				</plugins>
 			</build>
 		</profile>
+
 		<profile>
 			<id>release-sign-artifacts</id>
 			<activation>
@@ -137,7 +140,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>3.0.0</version>
+						<version>3.0.1</version>
 						<configuration>
 							<show>public</show>
 						</configuration>
@@ -175,28 +178,10 @@
 							<autoReleaseAfterClose>true</autoReleaseAfterClose>
 						</configuration>
 					</plugin>
-					<plugin>
-						<artifactId>maven-resources-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>copy-resources</id>
-								<phase>validate</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<outputDirectory>${basedir}/target/classes/static/</outputDirectory>
-									<resources>
-										<resource>
-											<directory>${basedir}/../elastest-torm-gui/dist</directory>
-										</resource>
-									</resources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
 				</plugins>
 			</build>
 		</profile>
+
 	</profiles>
+
 </project>
