--- a/openvidu-test-e2e/pom.xml
+++ b/openvidu-test-e2e/pom.xml
@@ -57,15 +57,9 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- Test dependencies version -->
-		<junit.jupiter.version>5.0.3</junit.jupiter.version>
-		<junit.platform.version>1.3.2</junit.platform.version>
-		<selenium-jupiter.version>3.1.0</selenium-jupiter.version>
-		<org-seleniumhq-selenium.version>3.13.0</org-seleniumhq-selenium.version>
-		<slf4j.version>1.7.25</slf4j.version>
-
-		<!-- Plugins versions -->
-		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
-		<jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
+		<junit.jupiter.version>5.4.0</junit.jupiter.version>
+		<junit.platform.version>1.4.0</junit.platform.version>
+		<org-seleniumhq-selenium.version>3.141.59</org-seleniumhq-selenium.version>
 	</properties>
 
 	<dependencies>
@@ -78,13 +72,13 @@
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>selenium-jupiter</artifactId>
-			<version>2.1.0</version>
+			<version>3.1.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
-			<version>2.2.0</version>
+			<version>3.3.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -120,15 +114,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>23.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-runner</artifactId>
-			<version>1.0.1</version>
+			<version>${junit.platform.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -141,33 +129,37 @@
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>${version.json-simple}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>xml-apis</groupId>
 			<artifactId>xml-apis</artifactId>
-			<version>1.4.01</version>
+			<version>2.0.2</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jcodec</groupId>
 			<artifactId>jcodec</artifactId>
 			<version>0.2.3</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jcodec</groupId>
 			<artifactId>jcodec-javase</artifactId>
 			<version>0.2.3</version>
+			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>io.openvidu</groupId>
 			<artifactId>openvidu-java-client</artifactId>
 			<version>2.8.1</version>
+			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>com.mashape.unirest</groupId>
 			<artifactId>unirest-java</artifactId>
 			<version>1.4.9</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
