openvidu-test-e2e: Jenkinsfile update

--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -16,8 +16,8 @@ node('container') {
           sh(returnStdout: true, script: '''#!/bin/bash
             if $KURENTO_JAVA_SNAPSHOT ; then
             git clone https://github.com/Kurento/kurento-java.git
-            cd kurento && mvn clean install && MVN_VERSION=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
-            cd openvidu && mvn versions:set-property -Dproperty=version.kurento -DnewVersion=$MVN_VERSION
+            cd kurento-java && mvn clean install && MVN_VERSION=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
+            cd ../openvidu && mvn versions:set-property -Dproperty=version.kurento -DnewVersion=$MVN_VERSION
             fi
         '''.stripIndent())
         }
