openvidu-test-e2e: Jenkinsfile update

--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -13,7 +13,7 @@ node('container') {
           sh 'rm -rf openvidu || true'
           sh 'rm -rf /opt/openvidu/recordings/* || true'
           sh 'git clone https://github.com/OpenVidu/openvidu.git'
-          BUILD_STATUS = sh(returnStdout: true, returnStatus: true, script: '''#!/bin/bash
+          BUILD_STATUS = sh(returnStatus: true, script: '''#!/bin/bash
             if $KURENTO_JAVA_SNAPSHOT ; then
             git clone https://github.com/Kurento/kurento-java.git
             cd kurento-java && mvn clean install && MVN_VERSION=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
