--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -11,6 +11,7 @@ node('container') {
         stage('Preparation') {
           sh 'rm -rf ~/.m2 || true'
           sh 'rm -rf openvidu || true'
+          sh 'rm -rf kurento-java || true'
           sh 'rm -rf /opt/openvidu/recordings/* || true'
           sh 'git clone https://github.com/OpenVidu/openvidu.git'
           BUILD_STATUS = sh(returnStatus: true, script: '''#!/bin/bash
