--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -17,9 +17,10 @@ node('container') {
           sh(script: '''#!/bin/bash
             if $KURENTO_JAVA_SNAPSHOT ; then
             git clone https://github.com/Kurento/kurento-java.git
-            cd kurento-java/kurento-client && mvn --batch-mode compile org.kurento:kurento-maven-plugin:6.7.0:generate-kurento-client
-            cd kurento-java && mvn --batch-mode clean install && MVN_VERSION=$(mvn --batch-mode -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
+            cd kurento-java && MVN_VERSION=$(mvn --batch-mode -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
             cd ../openvidu && mvn --batch-mode versions:set-property -Dproperty=version.kurento -DnewVersion=$MVN_VERSION
+            mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:get -DrepoUrl=https://maven.openvidu.io/repository/snapshots/ -Dartifact=org.kurento:kurento-client:$MVN_VERSION
+            mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:get -DrepoUrl=https://maven.openvidu.io/repository/snapshots/ -Dartifact=org.kurento:kurento-jsonrpc-server:$MVN_VERSION
             fi
         '''.stripIndent())
         }
