--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -19,8 +19,8 @@ node('container') {
             git clone https://github.com/Kurento/kurento-java.git
             cd kurento-java && MVN_VERSION=$(mvn --batch-mode -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
             cd ../openvidu && mvn --batch-mode versions:set-property -Dproperty=version.kurento -DnewVersion=$MVN_VERSION
-            mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:get -DrepoUrl=https://maven.openvidu.io/repository/snapshots/ -Dartifact=org.kurento:kurento-client:$MVN_VERSION
-            mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.1:get -DrepoUrl=https://maven.openvidu.io/repository/snapshots/ -Dartifact=org.kurento:kurento-jsonrpc-server:$MVN_VERSION
+            mvn dependency:get -DrepoUrl=https://maven.openvidu.io/repository/snapshots/ -Dartifact=org.kurento:kurento-client:$MVN_VERSION
+            mvn dependency:get -DrepoUrl=https://maven.openvidu.io/repository/snapshots/ -Dartifact=org.kurento:kurento-jsonrpc-server:$MVN_VERSION
             fi
         '''.stripIndent())
         }
