--- a/openvidu-test-e2e/pom.xml
+++ b/openvidu-test-e2e/pom.xml
@@ -163,6 +163,12 @@
 		</dependency>
 		<dependency>
 			<groupId>io.openvidu</groupId>
+			<artifactId>openvidu-test-browsers</artifactId>
+			<version>1.0.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.openvidu</groupId>
 			<artifactId>openvidu-java-client</artifactId>
 			<version>2.8.1</version>
 			<scope>test</scope>
