--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -1,36 +1,36 @@
 {
   "dependencies": {
-    "@angular/animations": "7.2.4",
-    "@angular/cdk": "7.3.1",
-    "@angular/common": "7.2.4",
-    "@angular/compiler": "7.2.4",
-    "@angular/core": "7.2.4",
-    "@angular/flex-layout": "7.0.0-beta.23",
-    "@angular/forms": "7.2.4",
-    "@angular/http": "7.2.4",
-    "@angular/material": "7.3.1",
-    "@angular/platform-browser": "7.2.4",
-    "@angular/platform-browser-dynamic": "7.2.4",
-    "@angular/router": "7.2.4",
+    "@angular/animations": "7.2.10",
+    "@angular/cdk": "7.3.5",
+    "@angular/common": "7.2.10",
+    "@angular/compiler": "7.2.10",
+    "@angular/core": "7.2.10",
+    "@angular/flex-layout": "7.0.0-beta.24",
+    "@angular/forms": "7.2.10",
+    "@angular/http": "7.2.10",
+    "@angular/material": "7.3.5",
+    "@angular/platform-browser": "7.2.10",
+    "@angular/platform-browser-dynamic": "7.2.10",
+    "@angular/router": "7.2.10",
     "colormap": "2.3.0",
-    "core-js": "2.6.4",
+    "core-js": "2.6.5",
     "hammerjs": "2.0.8",
     "openvidu-browser": "2.8.0",
     "openvidu-node-client": "2.8.0",
     "rxjs": "6.4.0",
-    "zone.js": "0.8.29"
+    "zone.js": "0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13.1",
-    "@angular/cli": "7.3.1",
-    "@angular/compiler-cli": "7.2.4",
-    "@angular/language-service": "7.2.4",
-    "@types/jasmine": "3.3.8",
+    "@angular-devkit/build-angular": "0.13.6",
+    "@angular/cli": "7.3.6",
+    "@angular/compiler-cli": "7.2.10",
+    "@angular/language-service": "7.2.10",
+    "@types/jasmine": "3.3.12",
     "@types/jasminewd2": "2.0.6",
-    "@types/node": "10.12.24",
-    "codelyzer": "4.5.0",
-    "ts-node": "8.0.2",
-    "tslint": "5.12.1",
+    "@types/node": "11.11.7",
+    "codelyzer": "5.0.0-beta.2",
+    "ts-node": "8.0.3",
+    "tslint": "5.14.0",
     "typescript": "3.2.4"
   },
   "license": "Apache-2.0",
