openvidu-server: application-docker.properties updated

--- a/openvidu-server/src/main/resources/application-docker.properties
+++ b/openvidu-server/src/main/resources/application-docker.properties
@@ -11,7 +11,7 @@ server.ssl.key-store: classpath:openvidu-selfsigned.jks
 server.ssl.key-store-password: openvidu
 server.ssl.key-store-type: JKS
 server.ssl.key-alias: openvidu-selfsigned
-kms.uris=[\"ws://localhost:8888/kurento\"]
+kms.uris=["ws://localhost:8888/kurento"]
 
 openvidu.secret: MY_SECRET
 openvidu.publicurl: local
